# chip-8-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: cartridge.cpp  cartridge.h  chip_8_kernel.h  display.cpp  display.h  kernel.cpp  kernel.h  main.cpp  memory.cpp  memory.h  opcode.h  speakers.cpp  speakers.h
